# nescience-testnet

./: .gitignore  .taplo.toml  Cargo.toml  README.md  test_tps.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
accounts/: Cargo.toml
ci_scripts/: build-ubuntu.sh  lint-ubuntu.sh  test-ubuntu.sh
common/: Cargo.toml
common/src/: block.rs  commitment.rs  commitments_sparse_merkle_tree.rs  lib.rs  nullifier.rs  nullifier_sparse_merkle_tree.rs  public_transfer_receipts.rs  test_utils.rs  transaction.rs
core_primitives/: Cargo.toml
core_primitives/src/: commitment.rs  lib.rs  merkle_tree_public.rs  nullifier.rs  transaction.rs  utxo.rs
integration_tests/: Cargo.toml
integration_tests/proc_macro_test_attribute/: Cargo.toml
integration_tests/src/: lib.rs  test_suite_map.rs  tps_test_utils.rs
key_protocol/: Cargo.toml
mempool/src/: lib.rs
node_core/: Cargo.toml
node_core/src/: config.rs  lib.rs  pre_start.rs
node_rpc/: Cargo.toml
node_rpc/src/: lib.rs  net_utils.rs  process.rs
node_runner/: Cargo.toml
node_runner/src/: lib.rs
nssa/: Cargo.toml  build.rs
nssa/core/: Cargo.toml
nssa/program_methods/: Cargo.toml
nssa/src/: address.rs  error.rs  lib.rs  merkle_tree.rs  program.rs  public_transaction.rs  signature.rs  state.rs
nssa/test_program_methods/: Cargo.toml
rpc_primitives/: Cargo.toml
sc_core/: Cargo.toml
sc_core/src/: blob_utils.rs  (+7 more)
sequencer_core/: Cargo.toml
sequencer_rpc/: Cargo.toml
sequencer_runner/: Cargo.toml
storage/: Cargo.toml
utxo/: Cargo.toml
wallet/: Cargo.toml
zkvm/: Cargo.toml
(+151 files in other folders)
