[package]
name = "core_primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
sha2.workspace = true
elliptic-curve.workspace = true
monotree.workspace = true

[dependencies.storage]
path = "../storage"

[dependencies.sequencer_core]
path = "../sequencer_core"
